add border styling

--- a/css/style.css
+++ b/css/style.css
@@ -10,8 +10,15 @@ p {
 td > img {
   height: 250px;
   width: 250px;
+  border: 2px solid gray;
+  border-radius: 15%;
 }
 
 h1, h2 {
   color: #d3d9e2;
+}
+
+div > img {
+  border: 2px solid gray;
+  border-radius: 15%;
 }
